<resources>
    <string name="app_name">Currency Converter</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="tv_from">From</string>
    <string name="tv_to">To</string>
    <string name="input_amount">Amount</string>
    <string name="btn_convert">Convert</string>
    <string name="error_loading">Error loading currency!</string>

    <array name="currency_entries">
        <item>USD</item>
        <item>EUR</item>
        <item>AUD</item>
        <item>BGN</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CNY</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>GBP</item>
        <item>HKD</item>
        <item>HRK</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>ISK</item>
        <item>JPY</item>
        <item>KRW</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>PHP</item>
        <item>PLN</item>
        <item>RON</item>
        <item>RUB</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>THB</item>
        <item>TRY</item>
        <item>ZAR</item>
    </array>
</resources>